<resources>
    <string name="app_name">Customers Directory</string>
    <string name="welcome">Bienvenidos a su sistema de gestion de clientes empresariales. Por favor seleccione una empresa de la lista
        con la que desee trabajar. En caso de que no haya empresa creada o desee crear una, haga click en el botón flotante debajo.</string>
    <string name="add_new_business">Add new business</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_business">Save business</string>
    <string name="business_name">Nombre de la empresa</string>
    <string name="business_owner">Nombre de proprietario</string>
    <string name="business_phone">Telefono de la empresa</string>
    <string name="industry">Industria</string>
    <string name="rnc">RNC</string>
    <string name="customers_welcome">Bienvenid@, por favor seleccione el cliente que desea consultar. En caso de que no hayan clientes o desee crear uno, presione el botón flotante que esta en la esquina inferior derecha.</string>
    <string name="customer_name">Nombre del cliente</string>
    <string name="customer_phone">Teléfono del cliente</string>
    <string name="save_customer">Guardar cliente</string>
    <string name="customer_address">Dirección del cliente</string>
    <string name="business">Empresas disponibles</string>
    <string name="customers">Clientes disponibles</string>
    <string name="add">agregar</string>
</resources>